--- a/private_Library/private_Application Support/com.mitchellh.ghostty/config
+++ b/private_Library/private_Application Support/com.mitchellh.ghostty/config
@@ -7,7 +7,7 @@
 
 ## 主题
 # https://ghostty.org/docs/features/theme
-window-theme = auto
+window-theme = system
 theme = light:Monokai Pro Light,dark:Monokai Pro
 # theme = light:catppuccin-latte,dark:catppuccin-mocha
 # theme = light:GruvboxLight,dark:GruvboxDark
