--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "**/dot_local/share/fortune_modules/*": "plaintext",
-        "**/*.tmpl": "go-template"
+        "**/*.tmpl": "go-template",
+        "**/dot_vimrc": "Vimscript",
+        "**/dot_zshrc": "shellscript",
     }
 }
