--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,17 @@
 {
     "files.associations": {
         "**/dot_local/share/fortune_modules/*": "plaintext",
-        "**/*.tmpl": "go-template",
+        // "**/*.tmpl": "go-template",
         "**/dot_vimrc": "Vimscript",
         "**/dot_zshrc": "shellscript",
-    }
+        "**/*.sh.tmpl": "shellscript",
+        "**/*.zsh.tmpl": "shellscript",
+    },
+    "go-template.languages": [
+        "shellScript",
+        "Vimscript",
+    ],
+    "go-template.patterns": [
+        "**/*.{sh,zsh}.tmpl",
+    ],
 }
