--- a/private_Library/private_Application Support/com.mitchellh.ghostty/config
+++ b/private_Library/private_Application Support/com.mitchellh.ghostty/config
@@ -20,14 +20,12 @@ font-size = 12
 font-feature = -calt, -liga, -dlig
 adjust-cell-height = 20%
 
-# 用更亮代替粗体
-font-style-bold = false
-# bold-is-bright = true
-
 # 默认字体比较细
 font-thicken = true
 font-thicken-strength = 50
+
 bold-is-bright = false
+font-style-bold = true
 
 # 更新策略
 auto-update = download
